New Pie Chart component & demo page

--- a/src/pages/page2/page2.scss
+++ b/src/pages/page2/page2.scss
@@ -3,11 +3,11 @@ page-page2 {
 }
 
 
-.line-chart {
-  display: block;
-  width: 100%;
-  margin-top: 30px;
-}
+// .line-chart {
+//   display: block;
+//   width: 100%;
+//   margin-top: 30px;
+// }
 
 // .current-weather{
 //   display: inline-block;
